--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -51,3 +51,29 @@ h2 {
     font-size: 2.5vw;
   }
 }
+
+.or {
+  margin: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: grey;
+}
+
+.or:after,
+.or:before {
+  content: '';
+  display: block;
+  background: rgb(190, 190, 190);
+  width: 30%;
+  height: 1px;
+  margin: 0 10px;
+}
+
+.btn-google:hover {
+  background-color: #c32413 !important;
+}
+
+.btn-facebook:hover {
+  background-color: #1e4db4 !important;
+}
