--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,6 +20,25 @@ h2 {
   margin: 0.1rem;
 }
 
+.homepage-headings {
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.bundle-category {
+  text-align: center;
+}
+
+.btn-search:hover {
+  background-color: #78c2ad;
+  box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.5);
+}
+.btn-search:active {
+  background-color: #78c2ad !important;
+  box-shadow: 0 0 0 0.3rem rgb(255, 255, 255, 0.5) !important;
+}
+
+
 /* carousel */
 .carousel-item-next,
 .carousel-item-prev,
@@ -51,3 +70,4 @@ h2 {
     font-size: 2.5vw;
   }
 }
+
