--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -38,7 +38,6 @@ h2 {
   box-shadow: 0 0 0 0.3rem rgb(255, 255, 255, 0.5) !important;
 }
 
-
 /* carousel */
 .carousel-item-next,
 .carousel-item-prev,
@@ -51,11 +50,11 @@ h2 {
 }
 
 .carousel-caption h2 {
-  color: #fff;
+  color: #000;
 }
 
 .carousel img {
-  height: 300px;
+  max-height: 300px;
   padding: 30px;
   margin: 40px;
   border-radius: 50%;
@@ -70,4 +69,3 @@ h2 {
     font-size: 2.5vw;
   }
 }
-
