--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,14 @@ main {
   min-height: 80vh;
 }
 
+.faq {
+  background-color: black !important;
+}
+
+.faqb {
+  font-size: xx-large !important;
+}
+
 h3 {
   padding: 1rem 0;
 }
@@ -33,7 +41,7 @@ h2 {
   text-align: center;
 }
 
-.product-img{
+.product-img {
   width: 80px;
   border-radius: 50%;
 }
