--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -128,6 +128,10 @@ h2 {
   list-style-type: none;
   padding:  0;
 }
+.location-info h2{
+  color: #fff;
+
+}
 .location-info li{
   list-style-type: none;
   padding: 5px 0;
