--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -48,38 +48,31 @@ h2 {
   margin: auto;
 }
 
+/* carousel */
 .carousel {
-  border-radius: 20px;
-  padding: 10px;
+  border-radius: 10px;
+  padding: 10px 10px 0 10px;
+  height: 360px;
 }
 
-/* carousel */
 .carousel-item-next,
 .carousel-item-prev,
 .carousel-item.active {
   display: flex;
 }
-.carousel-caption {
-  position: absolute;
-  top: 0;
-}
 
-.carousel-caption h2 {
+.carousel h2 {
   color: #000;
 }
 
 .carousel img {
-  max-height: 300px;
-  padding: 4rem;
-  margin: 3rem;
-  border-radius: 50%;
+  max-height: 150px;
+  margin: auto;
+  border-radius: 10px;
 }
 
-.carousel a {
-  margin: 0 auto;
-}
 @media (max-width: 900px) {
-  .carousel-caption h2 {
+  .carousel h2 {
     font-size: 2.5vw;
   }
 }
