--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,11 +3,11 @@ main {
 }
 
 .faq {
-  background-color: black !important;
+  background-color: black;
 }
 
 .faqb {
-  font-size: xx-large !important;
+  font-size: xx-large;
 }
 
 h3 {
@@ -71,9 +71,26 @@ h2 {
   border-radius: 10px;
 }
 
+.mobileArrow {
+  margin-top: 1rem;
+}
+
 @media (max-width: 900px) {
   .carousel h2 {
     font-size: 2.5vw;
+  }
+}
+
+@media (max-width: 600px) {
+  .faqb {
+    font-size: large;
+  }
+  .faqRow {
+    font-size: large;
+  }
+  .mobileArrow {
+    margin-bottom: 1rem;
+    margin-top: 0;
   }
 }
 
