--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -75,9 +75,50 @@ h2 {
   margin-top: 1rem;
 }
 
+
+.map {
+  width: 81vw;
+  height: 50vh;
+  position: relative;
+  margin: 0 auto;
+}
+.location-icon {
+  font-size: 1.5rem;
+}
+.location-info {
+  position: absolute;
+  left: 1vw;
+  bottom: 12vh;
+  width: 35%;
+  padding: 1rem;
+  min-height: 1rem;
+  background-color: rgba(0, 0, 0, 0.6);
+  border-radius: 10px;
+  font-size: 1rem;
+  color: #fff;
+  z-index: 10000;
+}
+.location-info ul {
+  list-style-type: none;
+  padding: 0;
+}
+.location-info h2 {
+  color: #fff;
+}
+.location-info li {
+  list-style-type: none;
+  padding: 5px 0;
+}
+
 @media (max-width: 900px) {
   .carousel h2 {
     font-size: 2.5vw;
+  }
+  .location-info{
+    width: 40%;
+    bottom: 2vh;
+    font-size: .8rem;
+
   }
 }
 
@@ -92,6 +133,16 @@ h2 {
     margin-bottom: 1rem;
     margin-top: 0;
   }
+  .location-info{
+    width: 40%;
+    bottom: 22vh;
+    font-size: .6rem;
+  min-height: .2rem;
+  padding: .2rem;
+
+
+  }
+  
 }
 
 .or {
@@ -132,36 +183,4 @@ h2 {
 .dropdown-item:hover {
   background-color: #78c2ad !important;
 }
-.map {
-  width: 81vw;
-  height: 50vh;
-  position: relative;
-  margin: 0 auto;
-}
-.location-icon {
-  font-size: 1.5rem;
-}
-.location-info {
-  position: absolute;
-  left: 1vw;
-  bottom: 12vh;
-  width: 35%;
-  padding: 1rem;
-  min-height: 1rem;
-  background-color: rgba(0, 0, 0, 0.6);
-  border-radius: 10px;
-  font-size: 1rem;
-  color: #fff;
-  z-index: 10000;
-}
-.location-info ul {
-  list-style-type: none;
-  padding: 0;
-}
-.location-info h2 {
-  color: #fff;
-}
-.location-info li {
-  list-style-type: none;
-  padding: 5px 0;
-}
+
